More bug fixes, display languages now display for the native speaker