@@ -9,6 +9,7 @@
 package net.sf.memoranda;
 
 import java.util.Collection;
+import java.util.Random;
 import java.util.Vector;
 import java.util.Calendar;
 
@@ -263,14 +264,14 @@ public class TaskImpl implements Task, Comparable<Object> {
      * @see net.sf.memoranda.Task#getProgress()
      */
     public int getProgress() {
-        return new Integer(_element.getAttribute("progress").getValue()).intValue();
+        return new Integer(_element.getAttribute("progress").getValue());
     }
     /**
      * @see net.sf.memoranda.Task#setProgress(int)
      */
     public void setProgress(int p) {
         if ((p >= 0) && (p <= 100))
-            setAttr("progress", new Integer(p).toString());
+            setAttr("progress", Integer.valueOf(p).toString());
     }
     /**
      * @see net.sf.memoranda.Task#getPriority()
@@ -279,7 +280,7 @@ public class TaskImpl implements Task, Comparable<Object> {
         Attribute pa = _element.getAttribute("priority");
         if (pa == null)
             return Task.PRIORITY_NORMAL;
-        return Integer.valueOf(pa.getValue()).intValue();
+        return Integer.valueOf(pa.getValue());
     }
     /**
      * @see net.sf.memoranda.Task#setPriority(int)
@@ -351,8 +352,8 @@ public class TaskImpl implements Task, Comparable<Object> {
 	 }
 	 
 	 public int hashCode() {
-	    	int result = (int) (Math.random() * 42000);
-	    	return result;
+		 int result = new Random().nextInt();
+	     return result;
 	 }
 	 
 	/* 
