@@ -678,8 +678,8 @@ public class AppFrame extends JFrame {
         Object fwo = Context.get("FRAME_WIDTH");
         Object fho = Context.get("FRAME_HEIGHT");
         if ((fwo != null) && (fho != null)) {
-            int w = Integer.valueOf((String) fwo).intValue();
-            int h = new Integer((String) fho).intValue();
+            int w = Integer.valueOf((String) fwo);
+            int h = new Integer((String) fho);
             this.setSize(w, h);
         }
         else
@@ -688,8 +688,8 @@ public class AppFrame extends JFrame {
         Object xo = Context.get("FRAME_XPOS");
         Object yo = Context.get("FRAME_YPOS");
         if ((xo != null) && (yo != null)) {
-            int x = new Integer((String) xo).intValue();
-            int y = new Integer((String) yo).intValue();
+            int x = new Integer((String) xo);
+            int y = new Integer((String) yo);
             this.setLocation(x, y);
         }
 
@@ -1074,8 +1074,8 @@ public class AppFrame extends JFrame {
                 Context.put(
                         "LAST_SELECTED_EXPORT_FILE",
                         chooser.getSelectedFile().getPath());
-                Context.put("EXPORT_SPLIT_NOTES", new Boolean(dlg.splitChB.isSelected()).toString());
-                Context.put("EXPORT_TITLES_AS_HEADERS", new Boolean(dlg.titlesAsHeadersChB.isSelected()).toString());
+                Context.put("EXPORT_SPLIT_NOTES", Boolean.valueOf(dlg.splitChB.isSelected()).toString());
+                Context.put("EXPORT_TITLES_AS_HEADERS", Boolean.valueOf(dlg.titlesAsHeadersChB.isSelected()).toString());
         
         int ei = dlg.encCB.getSelectedIndex();
         enc = null;
