@@ -399,7 +399,7 @@ public class ImageDialog extends JDialog implements WindowListener {
             try {
                 ImageIcon img = new ImageIcon(chooser.getSelectedFile()
                         .getPath());
-                widthField.setText(new Integer(img.getIconWidth()).toString());
+                widthField.setText(Integer.valueOf(img.getIconWidth()).toString());
                 heightField
                         .setText(new Integer(img.getIconHeight()).toString());
             }
